changes for reproduce the attack offline for model llava-v1.5-7b

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ ckpts*
 # Demo
 serve_images/
 datasets/**
+
+# Slurm output
+*.out
+
+# Target models
+target_models/llava-v1.5-7b/*
+target_models/pretrained/clip-vit-large-patch14-336/*
+!target_models/llava-v1.5-7b/.gitkeep
+!target_models/pretrained/clip-vit-large-patch14-336/.gitkeep
