--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ target_models/llava-v1.5-7b/*
 target_models/pretrained/clip-vit-large-patch14-336/*
 !target_models/llava-v1.5-7b/.gitkeep
 !target_models/pretrained/clip-vit-large-patch14-336/.gitkeep
+
+#vicuna_weights_minigpt
+/fred/oz402/nhnguyen/Model_PJ/VLLM-MIA/MiniGPT-4/vicuna_weights/*
