--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ target_models/llava-v1.5-7b/*
 target_models/pretrained/clip-vit-large-patch14-336/*
 !target_models/llava-v1.5-7b/.gitkeep
 !target_models/pretrained/clip-vit-large-patch14-336/.gitkeep
+# ------------------- local, never in git -------------------
+VL-MIA-*-arrow*/         # datasets saved_to_disk
+VL-MIA-*-arrow.tgz
+llama_weights/           # 7B base model shards
+CLIP/                    # built wheel dir
+wheels/
+image_MIA/               # results
+text_MIA/
+vlmia_*_*.err            # slurm error logs
+slurm-*.out
