chore: ignore local datasets, weights, result folders and SLURM logs

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ image_MIA/               # results
 text_MIA/
 vlmia_*_*.err            # slurm error logs
 slurm-*.out
+
+# ----- local caches / results ------------------------------------------------
+CLIP/                       
+VL-MIA-image-arrow*/        
+VL-MIA-text-arrow*/         
+llama_weights/              
+llama_adapter_v21/image_MIA/
+llama_adapter_v21/vlmia_*.err
